# LaboratoryOfComputationalPhysics_Y8

./: 00_introduction.ipynb  00ex_introduction.ipynb  01_Fundamentals.ipynb  01ex_Fundamentals.ipynb  02_NumberRepresentation.ipynb  02ex_NumberRepresentation.ipynb  03_Bash.ipynb  04_Numpy.ipynb  04ex_Numpy.ipynb  05_OSEMN.ipynb  06_Pandas.ipynb  07_Visualization.ipynb  08_LinearAlgebra.ipynb  09_Algorithms.ipynb  09ex_Algorithms.ipynb  10_MonteCarlo.ipynb  README_GitInstructions.md  funcion1.py  main.py  pyproject.toml
.ipynb_checkpoints/: 00_introduction-checkpoint.ipynb
